--- a/back-end/roughcode/Jenkinsfile
+++ b/back-end/roughcode/Jenkinsfile
@@ -1,37 +1,37 @@
-node('java11-agent') {
-    stage ('Checkout') {
-        checkout scm
-    }
+// node('java11-agent') {
+//     stage ('Checkout') {
+//         checkout scm
+//     }
 
-    stage ('Git mining') {
-        discoverGitReferenceBuild()
-        mineRepository()
-        gitDiffStat()
-    }
+//     stage ('Git mining') {
+//         discoverGitReferenceBuild()
+//         mineRepository()
+//         gitDiffStat()
+//     }
 
-    stage ('Build, Test, and Static Analysis') {
-        withMaven(mavenLocalRepo: '/var/data/m2repository', mavenOpts: '-Xmx768m -Xms512m') {
-            sh 'mvn -V -e clean verify -Dmaven.test.failure.ignore -Dgpg.skip'
-        }
+//     stage ('Build, Test, and Static Analysis') {
+//         withMaven(mavenLocalRepo: '/var/data/m2repository', mavenOpts: '-Xmx768m -Xms512m') {
+//             sh 'mvn -V -e clean verify -Dmaven.test.failure.ignore -Dgpg.skip'
+//         }
 
-        recordIssues tools: [java(), javaDoc()], aggregatingResults: 'true', id: 'java', name: 'Java', filters:[excludeFile('.*Assert.java')]
-        recordIssues tool: errorProne(), healthy: 1, unhealthy: 20
+//         recordIssues tools: [java(), javaDoc()], aggregatingResults: 'true', id: 'java', name: 'Java', filters:[excludeFile('.*Assert.java')]
+//         recordIssues tool: errorProne(), healthy: 1, unhealthy: 20
 
-        junit testResults: '**/target/*-reports/TEST-*.xml'
-        publishCoverage adapters: [jacocoAdapter('**/*/jacoco.xml')], sourceFileResolver: sourceFiles('STORE_ALL_BUILD')
+//         junit testResults: '**/target/*-reports/TEST-*.xml'
+//         publishCoverage adapters: [jacocoAdapter('**/*/jacoco.xml')], sourceFileResolver: sourceFiles('STORE_ALL_BUILD')
 
-        recordIssues tools: [checkStyle(pattern: 'target/checkstyle-result.xml'),
-            spotBugs(pattern: 'target/spotbugsXml.xml'),
-            pmdParser(pattern: 'target/pmd.xml'),
-            cpd(pattern: 'target/cpd.xml'),
-            revApi(pattern: 'target/revapi-result.json'),
-            taskScanner(highTags:'FIXME', normalTags:'TODO', includePattern: '**/*.java', excludePattern: 'target/**/*')]
-    }
+//         recordIssues tools: [checkStyle(pattern: 'target/checkstyle-result.xml'),
+//             spotBugs(pattern: 'target/spotbugsXml.xml'),
+//             pmdParser(pattern: 'target/pmd.xml'),
+//             cpd(pattern: 'target/cpd.xml'),
+//             revApi(pattern: 'target/revapi-result.json'),
+//             taskScanner(highTags:'FIXME', normalTags:'TODO', includePattern: '**/*.java', excludePattern: 'target/**/*')]
+//     }
 
-    stage ('Collect Maven Warnings') {
-        recordIssues tool: mavenConsole()
-    }
-}
+//     stage ('Collect Maven Warnings') {
+//         recordIssues tool: mavenConsole()
+//     }
+// }
 
 
 // pipeline {
