--- a/back-end/roughcode/build.gradle
+++ b/back-end/roughcode/build.gradle
@@ -6,11 +6,11 @@ plugins {
     // id "org.sonarqube" version "3.3"
     // id 'jacoco'
     // id 'com.github.spotbugs' version '4.7.0'
-    id "com.github.spotbugs" version "5.0.14"
+    // id "com.github.spotbugs" version "5.0.14"
 
 // codenarc
-    id 'groovy'
-    id 'codenarc'
+    // id 'groovy'
+    // id 'codenarc'
 }
 
 group = 'com.cody'
@@ -23,11 +23,11 @@ configurations {
     }
 }
 // 
-spotbugs {
-  toolVersion = '4.7.3'
-  reportsDir = file("$project.buildDir/reports/spotbugs")
-  ignoreFailures = false
-}
+// spotbugs {
+//   toolVersion = '4.7.3'
+//   reportsDir = file("$project.buildDir/reports/spotbugs")
+//   ignoreFailures = false
+// }
 
 // tasks.withType(com.github.spotbugs.SpotBugsTask) {
 //    reports {
@@ -100,7 +100,7 @@ dependencies {
     // implementation 'org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:3.3'
 
     //codenarc
-    codenarc 'org.codenarc:CodeNarc:2.2.0'
+    // codenarc 'org.codenarc:CodeNarc:2.2.0'
 }
 
 tasks.named('test') {
