--- a/back-end/roughcode/src/main/resources/application.yml
+++ b/back-end/roughcode/src/main/resources/application.yml
@@ -24,6 +24,7 @@ spring:
           github:
             client-id: ${OAUTH2_CLIENT_ID}
             client-secret: ${OAUTH2_CLIENT_SECRET}
+            redirect-uri: http://${HOST}:8080/api/v1/oauth2/callback/github
   redis:
     host: ${HOST}
     port: 6379
