--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -10,7 +10,7 @@ server {
 
 
     location / {
-        proxy_pass          rough-code.com;
+        proxy_pass          http://rough-code.com;
         proxy_set_header    X-Real-Ip $remote_addr;
         proxy_set_header    x-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header    Host $host;
