--- a/back-end/roughcode/build.gradle
+++ b/back-end/roughcode/build.gradle
@@ -68,6 +68,9 @@ dependencies {
 
     // email
     implementation 'org.springframework.boot:spring-boot-starter-mail'
+
+    // aop
+    implementation 'org.springframework.boot:spring-boot-starter-aop'
 }
 
 tasks.named('test') {
