--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -38,8 +38,9 @@ services:
     restart: always
     container_name: nginx-back
     volumes:
-      - ./nginx/service-url.inc:/etc/nginx/conf.d/
-      - ./nginx/defalut.conf:/etc/nginx/conf.d/
+      # - ./nginx/:/etc/nginx/conf.d/
+      - ./nginx/service-url.inc:/etc/nginx/conf.d/service-url.inc
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
     build:
       context: ./nginx
       dockerfile: Dockerfile
