--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -39,8 +39,8 @@ services:
     container_name: nginx-back
     volumes:
       # - ./nginx/:/etc/nginx/conf.d/
-      - /var/jenkins_home/workspace/deploy-back/nginx/service-url.inc:/etc/nginx/conf.d/service-url.inc
-      - /var/jenkins_home/workspace/deploy-back/nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/service-url.inc:/etc/nginx/conf.d/service-url.inc
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
     build:
       context: ./nginx
       dockerfile: Dockerfile
