--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -37,10 +37,10 @@ services:
   nginx-back:
     restart: always
     container_name: nginx-back
-    volumes:
-      - ./nginx/:/etc/nginx/conf.d/
-      # - ./nginx/service-url.inc:/etc/nginx/conf.d/service-url.inc
-      # - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+    # volumes:
+    # - ./nginx/:/etc/nginx/conf.d/
+    # - ./nginx/service-url.inc:/etc/nginx/conf.d/service-url.inc
+    # - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
     build:
       context: ./nginx
       dockerfile: Dockerfile
