--- a/front-end/.prettierrc
+++ b/front-end/.prettierrc
@@ -1,8 +1,8 @@
 {
-  "tabWidth": 2,
-  "useTabs": false,
+  "endOfLine": "auto",
   "semi": true,
   "singleQuote": false,
+  "tabWidth": 2,
   "trailingComma": "es5",
-  "endOfLine": "auto"
+  "useTabs": false
 }
